Video overlay text alignment corrected

--- a/themes/wimera/assets/css/header.css
+++ b/themes/wimera/assets/css/header.css
@@ -7,6 +7,7 @@
 	/* color based on your theme */
 	background: white;
 	z-index: 100;
+	top: 0px;
 }
 
 /*
